--- a/Parallel_Sync_CNN_Research.ipynb
+++ b/Parallel_Sync_CNN_Research.ipynb
@@ -275,20 +275,20 @@
         "  \n",
         "  # Layer 1\n",
         "  model.add(tf.keras.layers.Conv2D(32, (3, 1), kernel_initializer=\"he_normal\", input_shape=(32, 32, 3), \n",
-        "                   padding=\"same\", kernel_regularizer=l2()))\n",
+        "                   padding=\"same\", kernel_regularizer=tf.keras.regularizers.l2()))\n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
-        "  model.add(tf.keras.layers.Conv2D(32, (1, 3), padding=\"same\", kernel_regularizer=l2()))  \n",
+        "  model.add(tf.keras.layers.Conv2D(32, (1, 3), padding=\"same\", kernel_regularizer=tf.keras.regularizers.l2()))  \n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
         "  \n",
         "  model.add(tf.keras.layers.MaxPooling2D(2, 2))\n",
         "            \n",
         "  # Layer 2\n",
-        "  model.add(tf.keras.layers.Conv2D(64, (3, 1), padding=\"same\", kernel_regularizer=l2()))\n",
+        "  model.add(tf.keras.layers.Conv2D(64, (3, 1), padding=\"same\", kernel_regularizer=tf.keras.regularizers.l2()))\n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
-        "  model.add(tf.keras.layers.Conv2D(64, (1, 3), padding=\"same\", kernel_regularizer=l2()))\n",
+        "  model.add(tf.keras.layers.Conv2D(64, (1, 3), padding=\"same\", kernel_regularizer=tf.keras.regularizers.l2()))\n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
         "  \n",
@@ -296,30 +296,30 @@
         "  model.add(tf.keras.layers.Dropout(.3))          \n",
         "            \n",
         "  # Layer 3\n",
-        "  model.add(tf.keras.layers.Conv2D(128, (3, 1), padding=\"same\", kernel_regularizer=l2()))\n",
+        "  model.add(tf.keras.layers.Conv2D(128, (3, 1), padding=\"same\", kernel_regularizer=tf.keras.regularizers.l2()))\n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
-        "  model.add(tf.keras.layers.Conv2D(128, (1, 3), padding=\"same\", kernel_regularizer=l2()))\n",
+        "  model.add(tf.keras.layers.Conv2D(128, (1, 3), padding=\"same\", kernel_regularizer=tf.keras.regularizers.l2()))\n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
         "  \n",
         "  model.add(tf.keras.layers.MaxPooling2D(2, 2))\n",
         "            \n",
         "  # Layer 4\n",
-        "  model.add(tf.keras.layers.Conv2D(256, (3, 1), padding=\"same\", kernel_regularizer=l2()))\n",
+        "  model.add(tf.keras.layers.Conv2D(256, (3, 1), padding=\"same\", kernel_regularizer=tf.keras.regularizers.l2()))\n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
-        "  model.add(tf.keras.layers.Conv2D(256, (1, 3), padding=\"same\", kernel_regularizer=l2()))\n",
+        "  model.add(tf.keras.layers.Conv2D(256, (1, 3), padding=\"same\", kernel_regularizer=tf.keras.regularizers.l2()))\n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
         "  model.add(tf.keras.layers.MaxPooling2D(2, 2))\n",
         "   \n",
         " \n",
         "  # Layer 5\n",
-        "  model.add(tf.keras.layers.Conv2D(512, (3, 1), padding=\"same\", kernel_regularizer=l2()))\n",
+        "  model.add(tf.keras.layers.Conv2D(512, (3, 1), padding=\"same\", kernel_regularizer=tf.keras.regularizers.l2()))\n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
-        "  model.add(tf.keras.layers.Conv2D(512, (1, 3), padding=\"same\", kernel_regularizer=l2()))\n",
+        "  model.add(tf.keras.layers.Conv2D(512, (1, 3), padding=\"same\", kernel_regularizer=tf.keras.regularizers.l2()))\n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
         "  \n",
@@ -329,17 +329,17 @@
         "            \n",
         "  # Layer 6 \n",
         "  model.add(tf.keras.layers.Flatten())\n",
-        "  model.add(tf.keras.layers.Dense(512, kernel_regularizer=l2()))\n",
+        "  model.add(tf.keras.layers.Dense(512, kernel_regularizer=tf.keras.regularizers.l2()))\n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
         "  \n",
         "  # Layer 7\n",
-        "  model.add(tf.keras.layers.Dense(512, kernel_regularizer=l2()))\n",
+        "  model.add(tf.keras.layers.Dense(512, kernel_regularizer=tf.keras.regularizers.l2()))\n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
         "            \n",
         "  # Layer 8 \n",
-        "  model.add(tf.keras.layers.Dense(256, kernel_regularizer=l2()))\n",
+        "  model.add(tf.keras.layers.Dense(256, kernel_regularizer=tf.keras.regularizers.l2()))\n",
         "  model.add(tf.keras.layers.Activation('relu'))\n",
         "  model.add(tf.keras.layers.BatchNormalization())\n",
         "  model.add(tf.keras.layers.Dropout(.5))\n",
