Created files that write to history so I can view them out of the VM

--- a/Parallel_Sync_CNN_Research.ipynb
+++ b/Parallel_Sync_CNN_Research.ipynb
@@ -560,8 +560,14 @@
         }
       },
       "source": [
-        "model = create_conv_net3()\n",
-        "model.summary()"
+        "model1 = create_conv_net1()\n",
+        "model2 = create_conv_net2()\n",
+        "model3 = create_conv_net3()\n",
+        "model1.summary()\n",
+        "print()\n",
+        "model2.summary()\n",
+        "print()\n",
+        "model3.summary()"
       ],
       "execution_count": 86,
       "outputs": [
@@ -711,22 +717,26 @@
         "# Now, run the model.\n",
         "optimizer = tf.keras.optimizers.SGD(momentum=0.9, nesterov = True)\n",
         "# optimizer = tf.keras.optimizers.Adam(epsilon=1e-8)\n",
+        "history = None\n",
         "\n",
         "if isParallel:\n",
         "  print('GPUs parallelized!')\n",
-        "  multi_gpu_model = tf.keras.utils.multi_gpu_model(model, 2)\n",
-        "  multi_gpu_model.compile(optimizer=optimizer, loss=\"categorical_crossentropy\", metrics=['accuracy'])\n",
+        "  multi_gpu_model = tf.keras.utils.multi_gpu_model(model2, 1)\n",
+        "  history = multi_gpu_model.compile(optimizer=optimizer, loss=\"categorical_crossentropy\", metrics=['accuracy'])\n",
         "  multi_gpu_model.fit_generator(data_gen.flow(x_train, y_train, batch_size=BATCH_SIZE), \n",
         "                      steps_per_epoch=(x_train.shape[0] // BATCH_SIZE), epochs=EPOCHS,\n",
         "                      validation_data=(x_test, y_test))\n",
         "else:\n",
         "  print('CPU Compilation')\n",
         "  \n",
-        "  model.compile(optimizer=optimizer, loss=\"categorical_crossentropy\", \n",
+        "  history = model.compile(optimizer=optimizer, loss=\"categorical_crossentropy\", \n",
         "                metrics=['accuracy'])\n",
         "  model.fit_generator(data_gen.flow(x_train, y_train, batch_size=BATCH_SIZE), \n",
         "                      steps_per_epoch=(x_train.shape[0] // BATCH_SIZE), epochs=EPOCHS,\n",
-        "                      validation_data=(x_test, y_test))"
+        "                      validation_data=(x_test, y_test))\n",
+        "\n",
+        "with open('model1.txt') as file:\n",
+        "  file.write(history)"
       ],
       "execution_count": 88,
       "outputs": [
@@ -756,6 +766,76 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hAZRk0OGVYXY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Now, run the model.\n",
+        "optimizer = tf.keras.optimizers.SGD(momentum=0.9, nesterov = True)\n",
+        "# optimizer = tf.keras.optimizers.Adam(epsilon=1e-8)\n",
+        "history = None\n",
+        "\n",
+        "if isParallel:\n",
+        "  print('GPUs parallelized!')\n",
+        "  multi_gpu_model = tf.keras.utils.multi_gpu_model(model2, 2)\n",
+        "  history = multi_gpu_model.compile(optimizer=optimizer, loss=\"categorical_crossentropy\", metrics=['accuracy'])\n",
+        "  multi_gpu_model.fit_generator(data_gen.flow(x_train, y_train, batch_size=BATCH_SIZE), \n",
+        "                      steps_per_epoch=(x_train.shape[0] // BATCH_SIZE), epochs=EPOCHS,\n",
+        "                      validation_data=(x_test, y_test))\n",
+        "else:\n",
+        "  print('CPU Compilation')\n",
+        "  \n",
+        "  history = model.compile(optimizer=optimizer, loss=\"categorical_crossentropy\", \n",
+        "                metrics=['accuracy'])\n",
+        "  model.fit_generator(data_gen.flow(x_train, y_train, batch_size=BATCH_SIZE), \n",
+        "                      steps_per_epoch=(x_train.shape[0] // BATCH_SIZE), epochs=EPOCHS,\n",
+        "                      validation_data=(x_test, y_test))\n",
+        "\n",
+        "with open('model2.txt') as file:\n",
+        "  file.write(history)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RQ7NSImrVaEZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Now, run the model.\n",
+        "optimizer = tf.keras.optimizers.SGD(momentum=0.9, nesterov = True)\n",
+        "# optimizer = tf.keras.optimizers.Adam(epsilon=1e-8)\n",
+        "history = None\n",
+        "\n",
+        "if isParallel:\n",
+        "  print('GPUs parallelized!')\n",
+        "  multi_gpu_model = tf.keras.utils.multi_gpu_model(model3, 2)\n",
+        "  history = multi_gpu_model.compile(optimizer=optimizer, loss=\"categorical_crossentropy\", metrics=['accuracy'])\n",
+        "  multi_gpu_model.fit_generator(data_gen.flow(x_train, y_train, batch_size=BATCH_SIZE), \n",
+        "                      steps_per_epoch=(x_train.shape[0] // BATCH_SIZE), epochs=EPOCHS,\n",
+        "                      validation_data=(x_test, y_test))\n",
+        "else:\n",
+        "  print('CPU Compilation')\n",
+        "  \n",
+        "  history = model.compile(optimizer=optimizer, loss=\"categorical_crossentropy\", \n",
+        "                metrics=['accuracy'])\n",
+        "  model.fit_generator(data_gen.flow(x_train, y_train, batch_size=BATCH_SIZE), \n",
+        "                      steps_per_epoch=(x_train.shape[0] // BATCH_SIZE), epochs=EPOCHS,\n",
+        "                      validation_data=(x_test, y_test))\n",
+        "\n",
+        "with open('model3.txt') as file:\n",
+        "  file.write(history)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
