Added some extra markdown.

--- a/Parallel_Sync_CNN_Research.ipynb
+++ b/Parallel_Sync_CNN_Research.ipynb
@@ -172,6 +172,9 @@
       },
       "source": [
         "def normalize_data(x_train, x_test):\n",
+        "  \"\"\" Normalizes the data by dividing by subtracting the mean \n",
+        "      and dividing by the standard deviation. Akin to scikit-learn's\n",
+        "      StandardScaler.\"\"\"\n",
         "  mean_train, mean_test = np.mean(x_train), np.mean(x_test)\n",
         "  std_train, std_test = np.std(x_train), np.std(x_test)\n",
         "  return ((x_train - mean_train) / std_train, (x_test - mean_test) / std_test)\n",
@@ -202,6 +205,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lYkUvDWdihFI",
+        "colab_type": "text"
+      },
+      "source": [
+        "And now, we prepare the data for preprocessing!"
+      ]
     },
     {
       "cell_type": "code",
@@ -241,7 +254,7 @@
         "\n",
         "data_gen.fit(x_train)\n",
         "\n",
-        "reg_factor = 0.005"
+        "reg_factor = 0.005 # Regularization factor for L2 Regularization"
       ],
       "execution_count": 79,
       "outputs": [
@@ -263,7 +276,7 @@
       },
       "source": [
         "# Building The Model\n",
-        "The model was built by using a combination of methods from the Inceptionv3 model and the VGGNet models that are on Github. The layers used are given in the imports in the first code cell."
+        "The models were built by using a combination of methods from the Inceptionv3 model and the VGGNet models that are on Github. The layers used are given in the imports in the first code cell."
       ]
     },
     {
@@ -274,7 +287,6 @@
         "colab": {}
       },
       "source": [
-        "\n",
         "\n",
         "def create_conv_net1():\n",
         "  model = tf.keras.models.Sequential()\n",
@@ -549,6 +561,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y3aRBjBUi12H",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now, we print the models to see their summary and number of parameters in each."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "JH1We1lv0yDL",
@@ -563,6 +585,7 @@
         "model1 = create_conv_net1()\n",
         "model2 = create_conv_net2()\n",
         "model3 = create_conv_net3()\n",
+        "\n",
         "model1.summary()\n",
         "print()\n",
         "model2.summary()\n",
